feat: 글 수정 기능 구현

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,5 +1,6 @@
 .container {
     margin-top: 100px;
+    min-width: 800px;
 }
 
 .writeForm {
@@ -10,15 +11,42 @@
 }
 
 .post {
+    position: relative;
     padding: 5px 10px;
     display: flex;
     align-items: center;
     .text {
         margin-right: auto;
+        cursor: pointer;
+        &:hover {
+            text-decoration: underline;
+        }
         strong {
             margin-right: 10px;
         }
-        span {
+    }
+    .modifyForm {
+        display: none;
+        position: absolute;
+        width: calc(100% - 110px);
+        &.visible {
+            display: block;
+        }
+        .modifyBox {
+        }
+        .confirm {
+            position: absolute;
+            top: 0;
+            width: 80px;
+            right: 90px;
+            border-color: #000;
+        }
+        .cancel {
+            position: absolute;
+            top: 0;
+            width: 80px;
+            right: 0px;
+            border-color: #000;
         }
     }
 
@@ -27,6 +55,7 @@
         gap: 10px;
 
         .like {
+            width: 80px;
             white-space: nowrap;
             strong {
                 margin-right: 5px;
