--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -32,21 +32,29 @@
         &.visible {
             display: block;
         }
-        .modifyBox {
-        }
         .confirm {
             position: absolute;
             top: 0;
-            width: 80px;
-            right: 90px;
+            width: 81px;
+            right: 92px;
+            color: #000;
             border-color: #000;
+            &:hover {
+                color: #fff;
+                border-color: #fff;
+            }
         }
         .cancel {
             position: absolute;
             top: 0;
-            width: 80px;
+            width: 81px;
             right: 0px;
+            color: #000;
             border-color: #000;
+            &:hover {
+                color: #fff;
+                border-color: #fff;
+            }
         }
     }
 
