--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,146 +1,145 @@
 .container {
-    margin-top: 100px;
-    min-width: 800px;
-}
-
-.writeForm {
-    margin-bottom: 10px;
-    .writeButton {
-        white-space: nowrap;
-    }
+  margin-top: 100px;
+  min-width: 835px;
 }
 
 .utility {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-bottom: 5px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 5px;
 
-    .searchBox {
-        position: relative;
+  .searchBox {
+    position: relative;
+    margin-right: 10px;
 
-        .searchButton {
-            position: relative;
-            z-index: 1;
-        }
-
-        .searchInput {
-            position: absolute;
-            top: 0;
-            left: 0;
-            transform: translateX(calc(-100% + 81px));
-            width: 0%;
-            transition: 0.4s;
-
-            &.visible {
-                width: 500%;
-            }
-        }
-        .magnifyIcon {
-            opacity: 0;
-            position: absolute;
-            top: 50%;
-            right: 90px;
-            transform: translateY(-50%);
-            transition: 1s;
-            cursor: pointer;
-            &.visible {
-                opacity: 1;
-            }
-        }
+    .searchButton {
+      position: relative;
+      z-index: 1;
     }
 
-    .sort {
-        width: 110px;
-        margin-left: 10px;
+    .searchInput {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translateX(calc(-100% + 81px));
+      width: 0%;
+      transition: 0.4s;
+
+      &.visible {
+        width: 450%;
+      }
     }
+    .closeIcon {
+      opacity: 0;
+      visibility: hidden;
+      position: absolute;
+      top: 50%;
+      right: 90px;
+      transform: translateY(-50%);
+      transition: 0.3s;
+      cursor: pointer;
+      &.visible {
+        opacity: 1;
+      }
+    }
+  }
+
+  .sort {
+    width: 110px;
+    margin-right: 10px;
+  }
 }
 
 .post {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    &.stressBorder {
-        border: 1px solid #000;
-    }
-    .overviewPost {
-        position: relative;
-        padding: 5px 10px;
-        display: flex;
-        align-items: center;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  &.stressBorder {
+    border: 1px solid #000;
+  }
+  .overviewPost {
+    position: relative;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
 
-        .text {
-            margin-right: auto;
-            cursor: pointer;
-            &:hover {
-                text-decoration: underline;
-            }
-            strong {
-                margin-right: 10px;
-            }
-        }
-        .modifyForm {
-            display: none;
-            position: absolute;
-            width: calc(100% - 110px);
-            &.visible {
-                display: block;
-            }
-            .confirm {
-                position: absolute;
-                top: 0;
-                width: 81px;
-                right: 92px;
-                color: #000;
-                border-color: #000;
-                &:hover {
-                    color: #fff;
-                    border-color: #fff;
-                }
-            }
-            .cancel {
-                position: absolute;
-                top: 0;
-                width: 81px;
-                right: 0px;
-                color: #000;
-                border-color: #000;
-                &:hover {
-                    color: #fff;
-                    border-color: #fff;
-                }
-            }
-        }
-
-        .buttonBox {
-            display: flex;
-            gap: 10px;
-
-            .like {
-                width: 80px;
-                white-space: nowrap;
-                strong {
-                    margin-right: 5px;
-                }
-            }
-        }
+    .postIndex {
+      margin-right: 10px;
     }
 
-    .contentModal {
-        display: none;
-        padding: 10px;
-        background: rgb(255, 255, 255);
-        border-top: 1px solid #ddd;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
-        &.visible {
-            display: block;
-        }
-
-        .date {
-            display: inline-block;
-            font-size: 13px;
-            color: #999;
-            margin-bottom: 10px;
-        }
+    .text {
+      margin-right: auto;
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+      }
+      strong {
+        margin-right: 10px;
+      }
     }
+    .modifyForm {
+      display: none;
+      position: absolute;
+      width: calc(100% - 110px);
+      &.visible {
+        display: block;
+      }
+      .confirm {
+        position: absolute;
+        top: 0;
+        width: 81px;
+        right: 92px;
+        color: #000;
+        border-color: #000;
+        &:hover {
+          color: #fff;
+          border-color: #fff;
+        }
+      }
+      .cancel {
+        position: absolute;
+        top: 0;
+        width: 81px;
+        right: 0px;
+        color: #000;
+        border-color: #000;
+        &:hover {
+          color: #fff;
+          border-color: #fff;
+        }
+      }
+    }
+
+    .buttonBox {
+      display: flex;
+      gap: 10px;
+
+      .like {
+        width: 80px;
+        white-space: nowrap;
+        strong {
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+
+  .contentModal {
+    display: none;
+    padding: 10px;
+    background: rgb(255, 255, 255);
+    border-top: 1px solid #ddd;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    &.visible {
+      display: block;
+    }
+
+    .date {
+      display: inline-block;
+      font-size: 13px;
+      color: #999;
+      margin-bottom: 10px;
+    }
+  }
 }
